<resources>
    <string name="app_name">RMail</string>
    <string name="hello_blank_fragment">Rmail</string>
    <string name="mail">Nama Pengirim</string>
    <string name="description">Deskripsi</string>
    <string name="subject">Subject</string>
    <string name="Back">Back</string>
    <string name="profile">Profile</string>
    <string name="rai">Kurnia Raihan Ardian</string>
    <string name="about"></string>
    <string name="bio">Esteemed Colleagues,
I am privileged to present myself as a Software Engineer of distinguished caliber. Proficient in a diverse array of programming languages including Dart, Flutter, Java, and PHP, I possess a proven track record in architecting sophisticated solutions that seamlessly harmonize functionality with aesthetics.
My unyielding commitment to technical excellence is underscored by an unwavering pursuit of the vanguard of technology, ensuring that I remain at the vantage point of innovation in software development. Beyond the realm of code, I actively participate in the broader tech community, fostering an environment of visionary collaboration and forward-thinking discourse.
It is with great honor that I find myself in the esteemed company of such accomplished peers. I anticipate, with fervent enthusiasm, the forthcoming opportunities to contribute to our collective pursuit of technological advancement.
For a comprehensive view of my work, I invite you to peruse my GitHub portfolio:
GitHub: github.com/lexynotfound
Respectfully,
[Kurnia Raihan Ardian]</string>
    <string name="user_information">User Information</string>
    <string name="username_">Username</string>
    <string name="lexy">Lexynotfound</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="age">Age</string>
    <string name="_21">22</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="_30_12_2001">30/01/2001</string>
    <string name="mobile">Mobile</string>
    <string name="_91_9000000009">+62 81230500458</string>
    <string name="email">Email</string>
    <string name="rai_gmail_com">rxxxxxxx@gmail.com</string>
    <string name="social_media">Social Media</string>
    <string-array name="data_name">
        <item>Kurnia Raihan Ardian</item>
        <item>Jati Priyatmoko</item>
        <item>Eka Galang Pratama</item>
        <item>Hoka</item>
        <item>Ramadhan</item>
        <item>afiq</item>
        <item>syahrul</item>
        <item>Bintang</item>
        <item>Alif</item>
        <item>vio</item>
        <item>galih</item>
        <item>alfa</item>
        <item>ahmad gaos sulalah</item>
        <item>akbar</item>
    </string-array>
    <string-array name="data_subject">
        <item>Jadwal Main</item>
        <item>Jadwal Main</item>
        <item>Jadwal Main</item>
        <item>Tugas</item>
        <item>Asking Bangkit</item>
        <item>Ngeluh</item>
        <item>Impress Bangkit Project</item>
        <item>khwatir banget sama kamu</item>
        <item>Asking Asigment</item>
        <item>Di cariin</item>
        <item>Asking Bangkit</item>
        <item>mutual friendship</item>
        <item>mutual</item>
        <item>ayok</item>
    </string-array>
    <string name="next">Share</string>
</resources>